--- a/index.html
+++ b/index.html
@@ -60,34 +60,22 @@
                     </div>
                     <div class="tab-contents active-tab" id="Денис">
                         <ul>
-                            <li><span>ДА1</span><br>fdndnty</li>
-                            <li><span>ДА1</span><br>ипеепч</li>
-                            <li><span>ДА1</span><br>апичт</li>
-                            <li><span>ДА1</span><br>авчи</li>
+                            <li><span>Денис</span><br>менеджер по подбору запчастей.</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="Сергей">
                         <ul>
-                            <li><span>С2</span><br>fdndnty</li>
-                            <li><span>С2</span><br>ипеепч</li>
-                            <li><span>С2</span><br>апичт</li>
-                            <li><span>С2</span><br>авчи</li>
+                            <li><span>Сергей</span><br>мастер по ремонту КПП.</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="Андреу">
                         <ul>
-                            <li><span>АН3</span><br>fdndnty</li>
-                            <li><span>АН3</span><br>ипеепч</li>
-                            <li><span>ДН3</span><br>апичт</li>
-                            <li><span>ДН3</span><br>авчи</li>
+                            <li><span>Андрей</span><br>мастер по ремонту ДВС.</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="Азиз">
                         <ul>
-                            <li><span>Аз4</span><br>fdndnty</li>
-                            <li><span>Аз4</span><br>ипеепч</li>
-                            <li><span>Аз4</span><br>апичт</li>
-                            <li><span>Аз4</span><br>авчи</li>
+                            <li><span>Азиз</span><br>мастер по ремонту ходовой.</li>
                         </ul>
                     </div>
             </div>
