--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 
 
                     <div class="tab-titles">
-                        <p class="tab-links active-link" onclick="opentab('Денис')"><img src="images/d1.png" width="50px" height="50px">Денис</p>
-                        <p class="tab-links" onclick="opentab('Сергей')"><img src="images/c1.png" width="50px" height="50px">Сергей</p>
-                        <p class="tab-links" onclick="opentab('Андреу')"><img src="images/a1.png" width="50px" height="50px">Андреу</p>
-                        <p class="tab-links" onclick="opentab('Азиз')"><img src="images/aziz.jpg" width="50px" height="50px">Азиз</p>
+                        <p class="tab-links active-link" onclick="opentab('Денис')"><img src="images/dn.png" width="50px" height="50px"><br>Денис</p>
+                        <p class="tab-links" onclick="opentab('Сергей')"><img src="images/cr.png" width="50px" height="50px"><br>Сергей</p>
+                        <p class="tab-links" onclick="opentab('Андреу')"><img src="images/an.png" width="50px" height="50px"><br>Андреу</p>
+                        <p class="tab-links" onclick="opentab('Азиз')"><img src="images/az.png" width="50px" height="50px"><br>Азиз</p>
                     </div>
                     <div class="tab-contents active-tab" id="Денис">
                         <ul>
