--- a/services/en.html
+++ b/services/en.html
@@ -14,13 +14,13 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="e1.jpg">
+                <img src="../images/e1.jpg">
             </div>
             <div class="about-col-2">
-                <img src="e2.jpg">
+                <img src="../images/e2.jpg">
             </div>
             <div class="about-col-3">
-                <img src="e3.jpg">
+                <img src="../images/e3.jpg">
             </div>
         </div>
     </div>
