--- a/services/gr.html
+++ b/services/gr.html
@@ -14,13 +14,13 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="g1.jpg">
+                <img src="../images/g1.jpg">
             </div>
             <div class="about-col-2">
-                <img src="g2.jpg">
+                <img src="../images/g2.jpg">
             </div>
             <div class="about-col-3">
-                <img src="g3.jpg">
+                <img src="../images/g3.jpg">
             </div>
         </div>
     </div>
