--- a/services/p.html
+++ b/services/p.html
@@ -14,13 +14,13 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="p1.jpg">
+                <img src="../images/p1.jpg">
             </div>
             <div class="about-col-2">
-                <img src="p2.jpg">
+                <img src="../images/p2.jpg">
             </div>
             <div class="about-col-3">
-                <img src="p3.jpg">
+                <img src="../images/p3.jpg">
             </div>
         </div>
     </div>
