--- a/img/ima1.html
+++ b/img/ima1.html
@@ -14,112 +14,112 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="Cars/1.jpg">
+                <img src="../images/1.jpg">
             </div>
             <div class="about-col-3">
-                <img src="Cars/2.jpg">
+                <img src="../images/2.jpg">
             </div>
             <div class="about-col-3">
-                <img src="Cars/3.jpg">
+                <img src="../images/3.jpg">
             </div>
         </div>
         <div class="row">
             <div class="about-col-1">
-                <img src="Cars/4.jpg">
+                <img src="../images/4.jpg">
             </div>
             <div class="about-col-3">
-                <img src="Cars/5.jpg">
+                <img src="../images/5.jpg">
             </div>
             <div class="about-col-3">
-                <img src="Cars/6.jpg">
+                <img src="../images/6.jpg">
             </div>
         </div>
         <div class="row">
             <div class="about-col-1">
-                <img src="Cars/7.jpg">
+                <img src="../images/7.jpg">
             </div>
             <div class="about-col-3">
-                <img src="Cars/8.jpg">
+                <img src="../images/8.jpg">
             </div>
             <div class="about-col-3">
-                <img src="Cars/9.jpg">
+                <img src="../images/9.jpg">
             </div>
         </div>
         <div class="row">
             <div class="about-col-1">
-                <img src="Cars/10.jpg">
+                <img src="../images/10.jpg">
             </div>
             <div class="about-col-3">
-                <img src="Cars/11.jpg">
+                <img src="../images/11.jpg">
             </div>
             <div class="about-col-3">
-                <img src="Cars/12.jpg">
+                <img src="../images/12.jpg">
             </div>
         </div>
         <div class="row">
             <div class="about-col-1">
-                <img src="Cars/13.jpg">
+                <img src="../images/13.jpg">
             </div>
             <div class="about-col-3">
-                <img src="Cars/14.jpg">
+                <img src="../images/14.jpg">
             </div>
             <div class="about-col-3">
-                <img src="Cars/15.jpg">
+                <img src="../images/15.jpg">
             </div>
         </div>
         <div class="row">
             <div class="about-col-1">
-                <img src="Cars/16.jpg">
+                <img src="../images/16.jpg">
             </div>
             <div class="about-col-3">
-                <img src="Cars/17.jpg">
+                <img src="../images/17.jpg">
             </div>
             <div class="about-col-3">
-                <img src="Cars/18.jpg">
+                <img src="../images/18.jpg">
             </div>
         </div>
         <div class="row">
             <div class="about-col-1">
-                <img src="Cars/19.jpg">
+                <img src="../images/19.jpg">
             </div>
             <div class="about-col-3">
-                <img src="Cars/20.jpg">
+                <img src="../images/20.jpg">
             </div>
             <div class="about-col-3">
-                <img src="Cars/21.jpg">
+                <img src="../images/21.jpg">
             </div>
         </div>
         <div class="row">
             <div class="about-col-1">
-                <img src="Cars/22.jpg">
+                <img src="../images/22.jpg">
             </div>
             <div class="about-col-3">
-                <img src="Cars/23.jpg">
+                <img src="../images/23.jpg">
             </div>
             <div class="about-col-3">
-                <img src="Cars/24.jpg">
+                <img src="../images/24.jpg">
             </div>
         </div>
         <div class="row">
             <div class="about-col-1">
-                <img src="Cars/25.jpg">
+                <img src="../images/25.jpg">
             </div>
             <div class="about-col-3">
-                <img src="Cars/26.jpg">
+                <img src="../images/26.jpg">
             </div>
             <div class="about-col-3">
-                <img src="Cars/27.jpg">
+                <img src="../images/27.jpg">
             </div>
         </div>
         <div class="row">
             <div class="about-col-1">
-                <img src="Cars/28.jpg">
+                <img src="../images/28.jpg">
             </div>
             <div class="about-col-3">
-                <img src="Cars/29.jpg">
+                <img src="../images/29.jpg">
             </div>
             <div class="about-col-3">
-                <img src="Cars/30.jpg">
+                <img src="../images/30.jpg">
             </div>
         </div>
     </div>
